# storm-tracking

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-presentation.yml
infrastructure/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: ci-stack.ts  pipeline-stack.ts
infrastructure/test/: ci-stack.test.ts  pipeline-stack.test.ts
presentation/: index.html  slides.md
scripts/: run-scraper.sh
src/storm_tracking/: era5.py  geo.py  parsers.py
tasks/blitzortung_scraper/: main.py
tasks/daily_briefing/: Dockerfile  main.py
tasks/dataset_builder/: main.py  requirements.txt
tasks/era5_downloader/: Dockerfile  main.py  requirements.txt
tasks/eswd_scraper/: main.py  requirements.txt
tasks/eumetsat_lightning/: main.py  requirements.txt
tasks/feature_engineer/: Dockerfile  main.py  requirements.txt
tasks/model_trainer/: Dockerfile  main.py  requirements.txt
tasks/storm_forecast/: Dockerfile  main.py  requirements.txt
tasks/topo_downloader/: main.py
tasks/weather_alerts/: main.py
tests/: test_daily_briefing.py  test_dataset_builder.py  test_era5.py  test_feature_engineer.py  test_geo.py  test_parsers.py  test_storm_forecast.py  test_weather_alerts.py
