[project]
name = "storm-tracking"
version = "0.1.0"
description = "3-hour thunderstorm prediction dataset pipeline for Switzerland"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "xarray>=2023.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cdsapi>=0.7.0",
    "cfgrib>=0.9.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
