[project]
name = "storm-tracking"
version = "0.1.0"
description = "3-hour thunderstorm prediction dataset pipeline for Switzerland"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "xarray>=2023.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cdsapi>=0.7.0",
    "cfgrib>=0.9.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tasks --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["tasks"]
omit = [
    "tasks/era5_downloader/*",
    "tasks/eumetsat_lightning/*",
    "tasks/topo_downloader/*",
    "tasks/model_trainer/*",
    "tasks/storm_forecast/*",
    "tasks/weather_alerts/*",
    "tasks/feature_engineer/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__",
    "def main\\(",
    "^\\s*logger\\.",
    "^\\s*logging\\.",
    "boto3\\.client",
    "^\\s*s3 =",
    "^\\s*sns =",
    "^\\s*bedrock =",
    "s3\\.get_object",
    "s3\\.put_object",
    "sns\\.publish",
    "bedrock\\.converse",
    "paginator",
    "except Exception",
    "import cfgrib",
    "import xarray",
]

[tool.ruff]
target-version = "py310"
line-length = 100
